Fixed bug where front page has a scrollbar at some screen sizes.

--- a/source/_less/front.less
+++ b/source/_less/front.less
@@ -66,7 +66,6 @@ body.frontmatter {
 
 .front {
   	position: relative;
-	overflow: auto;
 	&:extend(.clearfix all);
 	
 	h1, h2, h3, h4, h5, h6 {
